# weather-app-agenticworkflow

./: README.md  pyproject.toml
weather_app_agenticworkflow/: air_quality_reporter.py  doc_srape.py  llm.py  main.py  quality_assurance_agent.py  quality_assurance_review.py  research.py
weather_app_agenticworkflow/agents/: air_quality_reporter.py  quality_assurance.py
weather_app_agenticworkflow/tasks/: quality_assurance.py  research.py
weather_app_agenticworkflow/tools/: doc_srape.py
