[tool.poetry]
name = "weather-app-agenticworkflow"
version = "0.1.0"
description = ""
authors = ["Pratik Sharma <Pratiksharma@live.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = "^0.76.9"
crewai-tools = '>=0.13.4'
unstructured = '==0.10.25'
pyowm = '3.3.0'
tools = "^0.1.9"
python-dotenv = "1.0.0"
langchain-core = "0.3.15"
langchain-openai = "0.2.6"
decouple = "^0.0.7"
azure-identity = "^1.19.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

